# WinstonRedGuard

./: .editorconfig  .gitattributes  .gitignore  AGENT_CONTEXT.md  CLAUDE.md  PSScriptAnalyzerSettings.psd1  README.md  company_map.md
apps/app_evaluator/: README.md  pyproject.toml
apps/app_evaluator/src/app_evaluator/: __init__.py  cli.py  core.py  evaluator.py
apps/app_evaluator/tests/: test_smoke.py
apps/app_registry/: README.md  pyproject.toml
apps/app_registry/data/: registry.json
apps/app_registry/src/app_registry/: __init__.py  cli.py  core.py  registry.py
apps/app_registry/tests/: test_audit_cli.py  test_reevaluate_all_cli.py  test_registry_model.py  test_registry_smoke.py
apps/devtool_genome/: README.md  pyproject.toml
apps/devtool_genome/data/: tools.json
apps/devtool_genome/devtool_factory/: README.md  package-lock.json
apps/devtool_genome/devtool_factory/cli/: factory_cli.py
apps/devtool_genome/devtool_factory/deneme_app/: README.md  pyproject.toml
apps/devtool_genome/devtool_factory/file_watcher/: README.md  cli.py  core.py  pyproject.toml
apps/devtool_genome/devtool_factory/generator/: generate_tool.py
apps/devtool_genome/devtool_factory/line_counter/: README.md  cli.py  core.py  pyproject.toml
apps/devtool_genome/devtool_factory/log_analyzer/: cli.py  core.py  pyproject.toml
apps/devtool_genome/devtool_factory/ops_guard/: README.md  pyproject.toml
apps/devtool_genome/devtool_factory/path_checker/: README.md  cli.py  core.py  pyproject.toml
apps/devtool_genome/devtool_factory/text_cleaner/: cli.py  core.py  pyproject.toml
apps/devtool_genome/devtool_factory/word_counter/: README.md  cli.py  core.py  pyproject.toml
apps/devtool_genome/src/devtool_genome/: classifier.py  cli.py  test_classifier.py
apps/devtool_genome/tests/: test_catalog.py  test_classifier_cases.py  test_cli.py  test_fetch_backend.py  test_query.py  test_ranked.py  test_smoke.py
apps/devtool_genome/tests/devtool_factory/: test_generate_smoke.py
apps/farmer/: README.md  pyproject.toml
apps/farmer/src/farmer/: __init__.py  care_engine.py  cli.py  compost_manager.py  core.py  event_log.py  growth_engine.py  harvest_manager.py  reporter.py  scoring.py  seed_bank.py  selector.py  storage.py  warehouse.py
apps/farmer/tests/: test_flow.py  test_smoke.py
apps/forebet_helper/: .gitignore  Lille vs Aston Villa Prediction, Stats, H2H - 12 Mar 2026.html  README.md  pyproject.toml  pytest.ini
apps/forebet_helper/src/forebet_helper/: cache.py  cli.py  config.py  fetcher.py  models.py  normalizer.py  parser.py  signals.py  utils.py
apps/forebet_helper/tests/: test_cli.py  test_parser.py  test_signals.py
apps/forebet_helper/tests/fixtures/: sample_match_page.html
apps/governance_check/: README.md  pyproject.toml
apps/governance_check/src/governance_check/: __init__.py  checker.py  cli.py  core.py
apps/governance_check/tests/: test_check_cli.py  test_governance_smoke.py
apps/kule_guard/: README.md  pyproject.toml
apps/kule_guard/src/kule_guard/: __init__.py  core.py
apps/kule_guard/tests/: test_smoke.py
apps/ops_guard2/: README.md  pyproject.toml
apps/ops_guard2/src/ops_guard2/: __init__.py  core.py
apps/ops_guard2/tests/: test_smoke.py
apps/ornek_app/: README.md  pyproject.toml
apps/ornek_app/src/ornek_app/: __init__.py  core.py
apps/ornek_app/tests/: test_smoke.py
apps/pc_motor/: .gitignore  pyproject.toml
apps/pc_motor/pc_motor/: __init__.py
apps/pc_motor/shorts_engine/: CHANGELOG.md  README.md
apps/pc_motor/shorts_engine/docs/: ARCHITECTURE_LAYER2.md  BATCH_FAILURE_POLICY.md  BATCH_REPORT_CONTRACT.md  FLOW_RENDER_JOB.md  IDEAS_PIPELINE.md  JOB_GENERATOR.md  KPI_REPORTING.md  LINT_POLICY.md  META_CONTRACT.md  PLANNING.md  PRESETS.md  RELEASING.md  RUNS_RETENTION.md  architecture.md  cli_contract.md  run_store.md  verification.md
apps/pc_motor/shorts_engine/tasks/: codex_explain_prompt.txt
apps/pc_motor/shorts_engine/tests/: test_render_batch_stdout_contract.py
apps/pc_motor/shorts_engine/tools/: qa_render_batch_contract.ps1  qa_run_contract.ps1  render_min.ps1  run_qc_gate.ps1  smoke_batch_resume.ps1  smoke_determinism.ps1  smoke_diagnosis_trace_fallback.ps1  smoke_jobset.ps1  smoke_meta_contract.ps1  smoke_plan.ps1  smoke_publish.ps1  smoke_qc.ps1  smoke_release_build.ps1  smoke_thumb.ps1  smoke_trace_fallback.ps1  tts_mux_qc.ps1  upgrade_job_v05.ps1
apps/pc_motor/tests/: test_smoke.py
apps/pc_motor/tools/: dump_schema.py
apps/refinery/: README.md  pyproject.toml
apps/refinery/src/refinery/: __init__.py  bundle_engine.py  cli.py  core.py  (+3 more)
apps/refinery/tests/: test_refinery_flow.py  test_smoke.py
apps/repo_analyzer/: README.md  pyproject.toml
apps/repo_analyzer/repo_analyzer/: cli.py  core.py
apps/repo_analyzer/tests/: test_smoke.py
apps/repo_doctor/: README.md  pyproject.toml  pytest.ini
apps/repo_doctor/tests/: test_smoke.py
apps/saha_guard/: README.md  pyproject.toml
apps/saha_guard/tests/: test_smoke.py
apps/shorts_engine/: .gitignore  pyproject.toml
apps/shorts_engine/docs/: CACHE_POLICY.md  DIAGRAMS.md  EXIT_CODES.md  FILES_MAP.md  JOBSET_CONTRACT.md  README.md  RUN_STORE_CONTRACT.md  THUMBNAILS.md  contracts.md
apps/shorts_engine/layer2/: __init__.py
apps/shorts_engine/tests/: test_batch_report_contract.py  test_smoke.py
apps/shorts_engine/tools/: explain.ps1  release_check.ps1  smoke_batch.ps1  smoke_batch_manifest.ps1  smoke_cache_policy.ps1  smoke_cleanup.ps1  smoke_gen_jobs.ps1  smoke_ideas.ps1  smoke_kpi.ps1  smoke_lint.ps1  smoke_presets.ps1  verify.ps1
apps/workspace_inspector/: .gitignore  CHANGELOG.md  DEV_ENV.md  README.md  STATE.md  pyproject.toml
apps/workspace_inspector/tests/: test_cli_behavior.py  test_cli_format.py
apps/workspace_inspector/tools/: _pslib.ps1  dev.ps1  qa_cli.ps1  release.ps1  smoke.ps1
apps/workspace_inspector/workspace_inspector/: __main__.py
apps/wrg_control/: README.md  pyproject.toml
apps/wrg_control/tests/: test_smoke.py
apps/wrg_orchestrator/: README.md  pyproject.toml
apps/wrg_orchestrator/tests/: test_smoke.py  test_workflows.py
(+152 files in other folders)
