[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devtool-genome"
version = "0.1.0"
description = "Developer tool genome catalog CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "requests>=2.31"
]

[project.optional-dependencies]
scrapling = [
    "scrapling"
]

[project.scripts]
dgen = "devtool_genome.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
