[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farmer"
version = "0.1.0"
description = "WRG product lifecycle manager from seed to compost"
requires-python = ">=3.10"

[project.scripts]
farmer = "farmer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
