[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kule_guard"
version = "0.1.0"
description = "kule_guard CLI tool"
requires-python = ">=3.10"

[project.scripts]
kule_guard = "kule_guard.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

