[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops_guard2"
version = "0.1.0"
description = "ops_guard2 CLI tool"
requires-python = ">=3.10"

[project.scripts]
ops_guard2 = "ops_guard2.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

