[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pc_motor"
version = "0.0.0"
description = "WinstonRedGuard monorepo app: pc_motor"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pc_motor*", "src*"]
exclude = ["tests*", "reports*", "runs*", "output*", "tasks*", "tools*", "docs*", ".codex*"]
