[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_analyzer"
version = "0.1.0"
description = "List detected apps under the monorepo apps directory"
requires-python = ">=3.10"

[project.scripts]
repo_analyzer = "repo_analyzer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
