[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saha_guard"
version = "0.1.0"
description = "saha_guard CLI tool"
requires-python = ">=3.10"

[project.scripts]
saha_guard = "saha_guard.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

