[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrg_control"
version = "0.1.0"
description = "Top-level control entrypoint for WinstonRedGuard"
requires-python = ">=3.10"

[project.scripts]
wrg_control = "wrg_control.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

