[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrg_orchestrator"
version = "0.1.0"
description = "Simple workflow orchestrator for WinstonRedGuard"
requires-python = ">=3.10"

[project.scripts]
wrg_orchestrator = "wrg_orchestrator.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

