[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{tool_name}}"
version = "0.1.0"
description = "{{description}}"
requires-python = ">=3.10"

[project.scripts]
{{tool_name}} = "{{tool_name}}.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

